[fix] 投稿編集の文字間のgapを修正

--- a/nextjs/features/posts/styles/post-detail.module.scss
+++ b/nextjs/features/posts/styles/post-detail.module.scss
@@ -235,7 +235,7 @@
         .postDetailProfileDescriptionContent {
           display: flex;
           flex-direction: column;
-          gap: 1rem;
+          gap: 0.5rem;
 
           .postDetailProfileDescriptionTitle {
             font-weight: bold;
